changes as well as added JVM flags for oop for 32 bit